tests/error/tracing_errors/bad_return1.err
Error: Type mismatch (at $FILE:8:0)
  | 
6 | 
7 | @guppy.comptime(module)
8 | def test() -> int:
  | ^^^^^^^^^^^^^^^^^^
9 |     return 1.0
  | ^^^^^^^^^^^^^^ Expected return value of type `int`, got `float`

Guppy compilation failed due to 1 previous error
